# IsometricRPG

./: .gitignore  README.md
isoRPG/: CMakeLists.txt  main.cpp  readme.md
isoRPG/assets/dialog/: armorer_dialog_0.txt  armorer_dialog_1.txt  puzzle_0_default  puzzle_0_question.txt  puzzle_1_default  puzzle_1_default.txt  puzzle_1_question.txt  puzzle_2_default.txt  puzzle_2_question.txt  puzzle_3_default.txt  puzzle_3_question.txt  puzzle_4_question.txt  trader_dialog_0.txt  trader_dialog_1.txt  trader_dialog_option_0.txt  trader_dialog_option_1.txt
isoRPG/assets/map/: IsoRPG.json  cave – Kopi.json  cave.json  collision_data  map.json  path find test.bck  untitled.tsx  world_1.json
isoRPG/assets/saves/: save1.txt  save2.txt  save3.txt
isoRPG/include/: application.h
isoRPG/include/collections/: addDialogOption.h  addDialoge.h  addDialogue.h  addDialogueOption.h  addPuzzle.h  drawable.h  drawableText.h  drawebleText.h  mouseClickedFunctions.h  mouseClikedFunctions.h  pathfinfigVariables.h  setUpAllCreatures.h  setUpCreature.h  setUpHealt.h  setUpPlayer.h  setUpRectShape.h  setUpUI.h
isoRPG/include/components/: CompCost.h  Comp_ActionTimers.h  Comp_AssosiateFunc.h  Comp_Changeable.h  Comp_Changeble.h  Comp_Children.h  Comp_Drawable.h  Comp_Draweble.h  Comp_Dying.h  Comp_Menuchoice.h  Comp_Parent.h  Comp_SqureShape.h  Comp_State.h  Comp_Temp.h  Comp_Text.h  Comp_Texture.h  Comp_UI.h  Comp_aniamteble.h  Comp_animation.h  Comp_healt.h  Comp_lootable.h  Comp_looteble.h  Comp_mousedOver.h  Comp_movable.h  Comp_moveble.h  Comp_position.h  Comp_save.h  Comp_size.h  Comp_talk.h  PathfindingNode.h  comp_collision.h  tempFunc.h
isoRPG/include/gameEngine/: music_player.h  resource_holder.h  resource_holder.inl  resource_identifiers.h  sound_player.h  state_identifiers.h  state_stack.h
isoRPG/include/map/: isometric_sprite.h  layer.h  map.h  object.h  sprite.h
isoRPG/include/states/: state_base.h  state_caracter_creation.h  state_character.h  state_game.h  state_game_over.h  state_menu.h  state_pause.h  state_settings.h  state_title.h
isoRPG/include/systems/: KillDialogs.h  KillDialogues.h  UpdateDialog.h  UpdateDialogue.h  animation.h  attack.h  collision_system.h  collsion.h  depth_sort_system.h  drawEntety.h  generatePath.h  killdying.h  lighting_system.h  loot.h  mouseClickedMenus.h  mouse_clicked.h  moveCreatures.h  pathfinding.h  resolveIAI_attack.h  resolvePositionChange.h  resolve_agro.h  resolve_movement.h  resolve_movment.h  sort_key_update.h  talk.h  updateMenu.h  update_UI.h
isoRPG/include/util/: maths.h  utility.h
isoRPG/src/: application.cpp
isoRPG/src/collection/: mouseClickedFunctions.cpp  setUpAllCreatures.cpp  setUpCreature.cpp  setUpHealt.cpp  setUpRectShape.cpp  setUpUI.cpp
isoRPG/src/gamEngine/: music_player.cpp  sound_player.cpp  sound_player.h  state_stack.cpp
isoRPG/src/map/: isometric_sprite.cpp  layer.cpp  map.cpp  object.cpp  sprite.cpp
isoRPG/src/states/: state_base.cpp  state_caracter_creation.cpp  state_character.cpp  state_game.cpp  state_game_over.cpp  state_menu.cpp  state_pause.cpp  state_settings.cpp  state_title.cpp
isoRPG/src/systems/: collision_system.cpp  generatePath.cpp  lighting_system.cpp  mouseClickedMenus.cpp  mouse_clicked.cpp  pathfinding.cpp  resolvePositionChange.cpp  resolve_agro.cpp  resolve_movement.cpp  resolve_movment.cpp  updateMenu.cpp  update_dialog.cpp  update_dialogue.cpp
isoRPG/src/util/: utility.cpp
isorpg/include/components/: Player.h
isorpg/src/components/: Comp_animation.cpp  Player.cpp
